--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "Cache methods using decorator",
   "main": "dist/index.js",
   "scripts": {
-    "start": "nodemon",
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -d"
   },
+  "files": [
+    "dist"
+  ],
   "author": "Guilherme Severo (guilhermehmsevero@hotmail.com)",
   "license": "ISC",
   "devDependencies": {
