--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-cache-decorator",
-  "version": "1.0.0",
-  "description": "Cache methods using decorator",
+  "version": "1.0.1",
+  "description": "Caching methods using decorator",
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc -d"
@@ -12,8 +12,6 @@
   "author": "Guilherme Severo (guilhermehmsevero@hotmail.com)",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
     "tsc": "^1.20150623.0",
     "typescript": "^4.2.2"
   },
